<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="no.hiof.larseknu.playingwithfragments.fragmentmanagerexample.FragmentManagerActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addJoyFragment"
        android:text="@string/add_joy"
        android:id="@+id/add_happy_fragment_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/add_sad_fragment_button"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/remove_happy_fragment_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addSadnessFragment"
        android:text="@string/add_sadness"
        android:id="@+id/add_sad_fragment_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/add_happy_fragment_button"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/remove_sad_fragment_button" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeJoyFragment"
        android:text="@string/remove_joy"
        android:id="@+id/remove_happy_fragment_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_happy_fragment_button"
        app:layout_constraintRight_toLeftOf="@+id/remove_sad_fragment_button"
        app:layout_constraintBottom_toTopOf="@+id/replace_happy_fragment_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeSadnessFragment"
        android:text="@string/remove_sadness"
        android:id="@+id/remove_sad_fragment_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_sad_fragment_button"
        app:layout_constraintLeft_toRightOf="@+id/remove_happy_fragment_button"
        app:layout_constraintBottom_toTopOf="@+id/replace_sad_fragment_button" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="replaceWithJoyFragment"
        android:text="@string/replace_with_joy_fragment"
        android:id="@+id/replace_happy_fragment_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_happy_fragment_button"
        app:layout_constraintRight_toLeftOf="@+id/replace_sad_fragment_button"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="replaceWithSadnessFragment"
        android:text="@string/replace_with_sadness_fragment"
        android:id="@+id/replace_sad_fragment_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_sad_fragment_button"
        app:layout_constraintLeft_toRightOf="@+id/replace_happy_fragment_button"
        app:layout_constraintBottom_toBottomOf="parent" />




</android.support.constraint.ConstraintLayout>